add update preferred auth method to atm service
